// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContainerEnv /> renders both env and configMapRef envFrom 1`] = `
<body>
  <div>
    <div
      class="DrawerItem ContainerEnvironment"
    >
      <span
        class="name"
      >
        Environment
      </span>
      <span
        class="value"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            foobar
          </span>
           : 
          https://localhost:12345
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            configFoo
          </span>
           : 
          configBar
        </div>
      </span>
    </div>
  </div>
</body>
`;

exports[`<ContainerEnv /> renders env 1`] = `
<body>
  <div>
    <div
      class="DrawerItem ContainerEnvironment"
    >
      <span
        class="name"
      >
        Environment
      </span>
      <span
        class="value"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            foobar
          </span>
           : 
          https://localhost:12345
        </div>
      </span>
    </div>
  </div>
</body>
`;

exports[`<ContainerEnv /> renders env 2`] = `
<body>
  <div>
    <div
      class="DrawerItem ContainerEnvironment"
    >
      <span
        class="name"
      >
        Environment
      </span>
      <span
        class="value"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            foobar
          </span>
           : 
          https://localhost:12345
        </div>
      </span>
    </div>
  </div>
</body>
`;

exports[`<ContainerEnv /> renders env from fieldRef 1`] = `
<body>
  <div>
    <div
      class="DrawerItem ContainerEnvironment"
    >
      <span
        class="name"
      >
        Environment
      </span>
      <span
        class="value"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            incorrect_field
          </span>
           : 
          fieldRef(status)
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            metadata_annotations_1
          </span>
           : 
          my-annotation-value
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            metadata_labels_1
          </span>
           : 
          my-app
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            metadata_name
          </span>
           : 
          my-pod
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            metadata_namespace
          </span>
           : 
          default
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            metadata_uid
          </span>
           : 
          1234
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            missing_annotation
          </span>
           : 
          fieldRef(metadata.annotations['missing'])
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            missing_field
          </span>
           : 
          fieldRef(status.missing)
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            missing_label
          </span>
           : 
          fieldRef(metadata.labels['missing'])
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            spec_node_name
          </span>
           : 
          my-node
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            spec_service_account_name
          </span>
           : 
          my-service-account
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            status_host_ip
          </span>
           : 
          1.2.3.4
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            status_host_ips
          </span>
           : 
          1.2.3.4,5.6.7.8
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            status_pod_ip
          </span>
           : 
          2.3.4.5
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            status_pod_ips
          </span>
           : 
          2.3.4.5,6.7.8.9
        </div>
      </span>
    </div>
  </div>
</body>
`;

exports[`<ContainerEnv /> renders env from resourceFieldRef 1`] = `
<body>
  <div>
    <div
      class="DrawerItem ContainerEnvironment"
    >
      <span
        class="name"
      >
        Environment
      </span>
      <span
        class="value"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu
          </span>
           : 
          4
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_container_1
          </span>
           : 
          4
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_container_2
          </span>
           : 
          2
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_container_missing
          </span>
           : 
          resourceFieldRef(missing: limits.cpu))
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_container_missing_divided
          </span>
           : 
          resourceFieldRef(missing: limits.cpu / 2))
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_divided
          </span>
           : 
          2
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_memory
          </span>
           : 
          8192
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            requests_cpu
          </span>
           : 
          2
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            requests_memory
          </span>
           : 
          4096
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      class="DrawerItem ContainerEnvironment"
    >
      <span
        class="name"
      >
        Environment
      </span>
      <span
        class="value"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu
          </span>
           : 
          2
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_container_1
          </span>
           : 
          4
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_container_2
          </span>
           : 
          2
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_container_missing
          </span>
           : 
          resourceFieldRef(missing: limits.cpu))
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_divided
          </span>
           : 
          1
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_memory
          </span>
           : 
          2147483648
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            requests_cpu
          </span>
           : 
          1
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            requests_memory
          </span>
           : 
          134217728
        </div>
      </span>
    </div>
  </div>
</body>
`;

exports[`<ContainerEnv /> renders env from resourceFieldRef 2`] = `
<body>
  <div>
    <div
      class="DrawerItem ContainerEnvironment"
    >
      <span
        class="name"
      >
        Environment
      </span>
      <span
        class="value"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu
          </span>
           : 
          4
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_container_1
          </span>
           : 
          4
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_container_2
          </span>
           : 
          2
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_container_missing
          </span>
           : 
          resourceFieldRef(missing: limits.cpu))
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_container_missing_divided
          </span>
           : 
          resourceFieldRef(missing: limits.cpu / 2))
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_divided
          </span>
           : 
          2
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_memory
          </span>
           : 
          8192
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            requests_cpu
          </span>
           : 
          2
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            requests_memory
          </span>
           : 
          4096
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      class="DrawerItem ContainerEnvironment"
    >
      <span
        class="name"
      >
        Environment
      </span>
      <span
        class="value"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu
          </span>
           : 
          2
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_container_1
          </span>
           : 
          4
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_container_2
          </span>
           : 
          2
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_container_missing
          </span>
           : 
          resourceFieldRef(missing: limits.cpu))
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_cpu_divided
          </span>
           : 
          1
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            limits_memory
          </span>
           : 
          2147483648
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            requests_cpu
          </span>
           : 
          1
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            requests_memory
          </span>
           : 
          134217728
        </div>
      </span>
    </div>
  </div>
</body>
`;

exports[`<ContainerEnv /> renders envFrom when given a configMapRef 1`] = `
<body>
  <div>
    <div
      class="DrawerItem ContainerEnvironment"
    >
      <span
        class="name"
      >
        Environment
      </span>
      <span
        class="value"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            configFoo
          </span>
           : 
          configBar
        </div>
      </span>
    </div>
  </div>
</body>
`;

exports[`<ContainerEnv /> renders envFrom when given a secretRef 1`] = `
<body>
  <div>
    <div
      class="DrawerItem ContainerEnvironment"
    >
      <span
        class="name"
      >
        Environment
      </span>
      <span
        class="value"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            bar
          </span>
           : 
          secret(my-secret)[bar]
           
          <i
            class="Icon secret-button material interactive focusable"
            data-testid="show-secret-button-for-default/my-secret:bar"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="visibility"
            >
              visibility
            </span>
          </i>
          <div
            data-testid="tooltip-content-for-show-secret-button-for-default/my-secret:bar"
          >
            Show
          </div>
        </div>
      </span>
    </div>
  </div>
</body>
`;
